--- a/rxjavademo/src/main/res/layout/activity_main.xml
+++ b/rxjavademo/src/main/res/layout/activity_main.xml
@@ -4,10 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="com.example.rxjavademo.MainActivity">
 
+    <Button
+        android:id="@+id/button"
+        android:onClick="click"
+        android:text="click"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <FrameLayout
+        android:layout_below="@id/button"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
